# rocketchat_API

./: .bandit  .coveragerc  .deepsource.toml  .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  bandit.yml  demo.py  docker-compose-test-server.yml  docker-compose.yml  pyproject.toml  qodana.yaml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  lint.yml  pralert.yml  release.yml  test.yml  test_latest.yml  test_manually.yml
API/: rocketchat.py
rocketchat_API/: rocketchat.py
rocketchat_API/APIExceptions/: RocketExceptions.py
rocketchat_API/APISections/: assets.py  banners.py  base.py  channels.py  chat.py  custom_emoji.py  custom_sounds.py  custom_user_status.py  dm.py  groups.py  im.py  integrations.py  invites.py  licenses.py  livechat.py  miscellaneous.py  moderation.py  permissions.py  roles.py  rooms.py  settings.py  statistics.py  subscriptions.py  teams.py  users.py  users_engagement.py  (+1 more)
tests/: conftest.py  run_rocketchat.sh  stop_rocketchat.sh  test_assets.py  test_banners.py  test_channels.py  test_chat.py  test_custom_emoji.py  test_custom_sounds.py  test_custom_user_status.py  test_dms.py  test_exceptions.py  test_groups.py  test_ims.py  test_integrations.py  test_invites.py  test_licenses.py  test_livechat.py  test_moderation.py  test_paginated.py  test_permissions.py  test_roles.py  test_rooms.py  test_server.py  test_settings.py  test_subscriptions.py  test_teams.py  test_user.py  test_users_engagement.py  test_video_conferences.py  tests.py
(+2 files in other folders)
